--- a/src/Vidly/Views/Movies/Random.cshtml
+++ b/src/Vidly/Views/Movies/Random.cshtml
@@ -1,9 +1,11 @@
-﻿@model Vidly.Models.Movie
+﻿@model Vidly.ViewModel.RandomMovieViewModel
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Model.Name</h2>
+<h2>@Model.movie.Name</h2>
+<h2>@Model.customer.Name</h2>
+
 
 
