--- a/src/Vidly/Views/Customer/Index.cshtml
+++ b/src/Vidly/Views/Customer/Index.cshtml
@@ -1,8 +1,34 @@
-﻿@model Vidly.Models.Customer
+﻿@model IEnumerable<Vidly.Models.Customer>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<h2>Customers</h2>
+<p>
+    @Html.ActionLink("Add ", "CustomerForm", "Customer", null, new { @class = "btn btn-primary glyphicon glyphicon-plus" })
+</p>
 
-<h2></h2>
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>Customer Name</th>
+            <th>Membership Type</th>
+            <th>Discount Rate</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var customer in Model)
+        {
+        <tr>
+            <td>@customer.Name</td>
+            <td>@customer.MembershipType.MembershipTypeName</td>
+            <td>@customer.MembershipType.DiscountRate%</td>
+            <td>@Html.ActionLink(" ", "Details", "Customer", new { id = customer.Id }, new { @class = "glyphicon glyphicon-eye-open" })</td>
+            <td>@Html.ActionLink(" ", "Edit", "Customer", new { id = customer.Id }, new { @class = "glyphicon glyphicon-trash" })</td>
+            @*<td>@Html.ActionLink("Edit", "Edit", "Customer", null, new { Id = customer.Id, @class = "btn btn-primary glyphicon glyphicon-edit" })</td>*@
+        </tr>
+        }
+    </tbody>
+</table>
 
