--- a/src/Vidly/Content/Site.css
+++ b/src/Vidly/Content/Site.css
@@ -22,3 +22,23 @@ select,
 textarea {
     max-width: 280px;
 }
+/*icons size*/
+.gi-2x {
+    font-size: 1.5em;
+}
+
+.gi-3x {
+    font-size: 3em;
+}
+
+.gi-4x {
+    font-size: 4em;
+}
+
+.gi-5x {
+    font-size: 5em;
+}
+/*links*/
+a:link{
+    text-decoration: none;
+}
