--- a/src/Vidly/Views/Customer/Index.cshtml
+++ b/src/Vidly/Views/Customer/Index.cshtml
@@ -3,12 +3,12 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2>Customers</h2>
+<h4>Customers</h4>
 <p>
     @Html.ActionLink("Add ", "CustomerForm", "Customer", null, new { @class = "btn btn-primary glyphicon glyphicon-plus" })
 </p>
 
-<table class="table table-striped table-hover">
+<table class="table table-striped table-hover table-bordered">
     <thead>
         <tr>
             <th>Customer Name</th>
@@ -24,9 +24,12 @@
             <td>@customer.Name</td>
             <td>@customer.MembershipType.MembershipTypeName</td>
             <td>@customer.MembershipType.DiscountRate%</td>
-            <td>@Html.ActionLink(" ", "Details", "Customer", new { id = customer.Id }, new { @class = "glyphicon glyphicon-eye-open" })</td>
-            <td>@Html.ActionLink(" ", "Edit", "Customer", new { id = customer.Id }, new { @class = "glyphicon glyphicon-trash" })</td>
-            @*<td>@Html.ActionLink("Edit", "Edit", "Customer", null, new { Id = customer.Id, @class = "btn btn-primary glyphicon glyphicon-edit" })</td>*@
+            <td>
+                @Html.ActionLink(" ", "Details", "Customer", new { id = customer.Id }, new { @class = "btn btn-success glyphicon glyphicon-eye-open" })
+                        @Html.ActionLink(" ", "Edit", "Customer", new { id = customer.Id }, new { @class = "btn btn-primary glyphicon glyphicon-edit" })
+                        @Html.ActionLink(" ", "Delete", "Customer", new { id = customer.Id }, new { @class = "btn btn-danger glyphicon glyphicon-trash" })
+            </td>
+          
         </tr>
         }
     </tbody>
