Customer Api added

--- a/src/Vidly/Content/Site.css
+++ b/src/Vidly/Content/Site.css
@@ -42,3 +42,13 @@ textarea {
 a:link{
     text-decoration: none;
 }
+.field-validation-error {
+    color: red;
+}
+
+.input-validation-error {
+    border: 2px solid red;
+}
+.validation-summary-errors {
+    color: red;
+}
