--- a/src/Vidly/Views/Customer/CustomerForm.cshtml
+++ b/src/Vidly/Views/Customer/CustomerForm.cshtml
@@ -7,18 +7,21 @@
 <h2>New Customer</h2>
 
 @using (Html.BeginForm("Save", "Customer"))
-{
+{   @Html.ValidationSummary(true, "Please fix the following errors");
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name)
         @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Name)
     </div>
     <div class="form-group">
         <label for="Birthdate">Date of Birth</label>
         @Html.TextBoxFor(m => m.Customer.Birthdate, "{0:d MMM yyyy}",new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Birthdate)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.MembershipTypeId)
         @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "MembershipTypeName"), "", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.MembershipTypeId)
     </div>
     <div class="form-check">
         <label class="form-check-label" for="exampleCheck1">
@@ -26,6 +29,11 @@
         </label>
     </div>
     @Html.HiddenFor(m => m.Customer.Id)
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
+}
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
 }
 
