--- a/src/Vidly/Views/Customer/CustomerForm.cshtml
+++ b/src/Vidly/Views/Customer/CustomerForm.cshtml
@@ -7,7 +7,7 @@
 <h2>New Customer</h2>
 
 @using (Html.BeginForm("Save", "Customer"))
-{   @Html.ValidationSummary(true, "Please fix the following errors");
+{   @*@Html.ValidationSummary(true, "Please fix the following errors");*@
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name)
         @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
