--- a/src/Vidly/Views/Customer/Index.cshtml
+++ b/src/Vidly/Views/Customer/Index.cshtml
@@ -8,7 +8,7 @@
     @Html.ActionLink("Add ", "CustomerForm", "Customer", null, new { @class = "btn btn-primary glyphicon glyphicon-plus" })
 </p>
 
-<table class="table table-striped table-hover table-bordered">
+<table id="customertbl" class="table table-striped table-hover table-bordered">
     <thead>
         <tr>
             <th>Customer Name</th>
@@ -27,7 +27,7 @@
             <td>
                 @Html.ActionLink(" ", "Details", "Customer", new { id = customer.Id }, new { @class = "btn btn-success glyphicon glyphicon-eye-open" })
                         @Html.ActionLink(" ", "Edit", "Customer", new { id = customer.Id }, new { @class = "btn btn-primary glyphicon glyphicon-edit" })
-                        @Html.ActionLink(" ", "Delete", "Customer", new { id = customer.Id }, new { @class = "btn btn-danger glyphicon glyphicon-trash" })
+                        <button data-customer-id="@customer.Id" class="js-delete btn btn-danger glyphicon glyphicon-trash"></button>
             </td>
           
         </tr>
@@ -35,3 +35,24 @@
     </tbody>
 </table>
 
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            $("#customertbl .js-delete").on("click", function () {
+                if (confirm('Are you sure you wish to delete this customer?'))
+                {
+                    var button = $(this);
+                    $.ajax({
+                        url: "/api/customers/" + button.attr("data-customer-id"),
+                        method: "DELETE",
+                        success: function () {
+                            button.parents("tr").remove();
+                        }
+                    }
+                    );
+                }
+            });
+        });
+    </script>
+}
