--- a/src/Vidly/Views/Movies/Index.cshtml
+++ b/src/Vidly/Views/Movies/Index.cshtml
@@ -8,7 +8,7 @@
 <p>
     @Html.ActionLink("Add ", "MovieForm", "Movies", null, new { @class = "btn btn-primary glyphicon glyphicon-plus" })
 </p>
-<table class="table table-striped table-hover table-bordered">
+<table id="movietbl" class="table table-striped table-hover table-bordered">
     <thead>
         <tr>
             <th>Name</th>
@@ -18,7 +18,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var movie in Model) 
+        @foreach (var movie in Model)
         {
             <tr>
                 <td>@movie.Name</td>
@@ -27,10 +27,31 @@
                 <td>
                     @Html.ActionLink(" ", "Details", "Movies", new { id = movie.Id }, new { @class = "btn btn-success glyphicon glyphicon-eye-open" })
                     @Html.ActionLink(" ", "Edit", "Movies", new { id = movie.Id }, new { @class = "btn btn-primary glyphicon glyphicon-edit" })
-                    @Html.ActionLink(" ", "Edit", "Customer", new { id = movie.Id }, new { @class = "btn btn-danger glyphicon glyphicon-trash" })
+                    <button data-movie-id="@movie.Id" class="js-delete btn btn-danger glyphicon glyphicon-trash"></button>
                 </td>
             </tr>
         }
     </tbody>
 </table>
-
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            $("#movietbl .js-delete").on("click", function () {
+                var button = $(this);
+                bootbox.confirm("Are you sure you want delete this customer?", function (result) {
+                    if (result) {                      
+                        $.ajax({
+                            url: "/api/movies/" + button.attr("data-movie-id"),
+                            method: "DELETE",
+                            success: function () {
+                                button.parents("tr").remove();
+                            }
+                        }
+                        );
+                    }
+                });
+            });
+        });
+    </script>
+}
