--- a/src/Vidly/Views/Customer/Index.cshtml
+++ b/src/Vidly/Views/Customer/Index.cshtml
@@ -40,9 +40,8 @@
     <script>
         $(document).ready(function () {
             $("#customertbl .js-delete").on("click", function () {
-                if (confirm('Are you sure you wish to delete this customer?'))
-                {
-                    var button = $(this);
+                var button = $(this);
+                bootbox.confirm("Are you sure you want to delete this Customer?", function (result) {
                     $.ajax({
                         url: "/api/customers/" + button.attr("data-customer-id"),
                         method: "DELETE",
@@ -51,7 +50,7 @@
                         }
                     }
                     );
-                }
+                });
             });
         });
     </script>
